feat: add feature of deleting task
